[package]
name = "foo"
version = "0.1.0"
authors = ["Anthony Vallee-Dubois <anthony.v.dubois@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34"
tui = "0.16"
termion = "1.5"
regex = "1"
lazy_static = "1.4.0"
hex = "0.4"

[[bin]]
name = "foo"
path = "main.rs"

[profile.release]
debug = true