[package]
name = "codegen"
version = "0.1.0"
authors = ["Anthony Vallee-Dubois <anthony.v.dubois@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"

[[bin]]
name = "codegen"
path = "main.rs"
